--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Todo List 2022 with LocalStorage</title>
+	<title>To-do-Application</title>
 	<!-- CSS Import -->
 	<link rel="stylesheet" href="main.css" />
 	<!-- End of CSS Import -->
 	<!-- Fonts -->
+	 <link rel="shortcut icon" href="productivity.png" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;0,900;1,400&family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
